# casdbot

./: .gitignore  README.md  appGUI.py  bot.py  download_exe.txt  icon.xbm  pyproject.toml  structures.py
src/: appGUI.py  bot.py  utils.py
tests/src/bot/: test_file.txt  test_generate_message_from_template.py  test_message_parser.py  test_send_emails.py  test_send_messages.py
